Tyrasz: added catalog and the item typical pages.

--- a/tyrasz/catalog.html
+++ b/tyrasz/catalog.html
@@ -48,73 +48,56 @@
     <!-- BEGIN content -->
     
 
-<div class="hero"> <!-- start .hero -->
-	<div class="hero__content-bg"></div>
-	<div class="section__inner">
-		<div class="hero__content">
-			<h2 class="hero__title">About Us</h2>
-			<!-- <h3 class="text--secondary">Characteristics</h3> -->
-			<ul>
-				<li>We are an integrated steelmaking company with more than <span class="text--secondary">50 years of tradition</span></li>
-				<li>Our parent organization is a world-class steel producer, <span class="text--secondary">United States Steel Corporation</span></li>
-				<li>Our annual raw steel production capability is <span class="text--secondary">4.5 million metric tons</span></li>
-				<li>We employ almost <span class="text--secondary">12 000 people</span></li>
-			</ul>
-		</div>
-	</div>
-</div> <!-- end .hero -->
-
-<div class="section advantages"> <!-- start .section.advantages -->
-	<div class="section__inner">
-		<div class="advantages__grid">
-			<div class="advantages__item advantages__item--title"> <!-- start .advantages__item -->
-				<h2>We apply<br><span class="text--secondary">5 core business values</span></h2>
-				<p>in our production activities, communication with our employees and business partners</p>
-			</div> <!-- end .advantages__item -->
-			<div class="advantages__item"> <!-- start .advantages__item -->
-				<svg class="icon-success"><use xlink:href="#success"></use></svg>
-				<strong>Diversity and Inclusion</strong>
-				<p>respecting the diversity and talents of employees, recognizing their contributions to the overall success of the Company</p>
-			</div> <!-- end .advantages__item -->
-			<div class="advantages__item"> <!-- start .advantages__item -->
-				<svg class="icon-success"><use xlink:href="#success"></use></svg>
-				<strong>Safety</strong>
-				<p>protecting the health and welfare of employees, contractors and visitors is the Company’s top priority</p>
-			</div> <!-- end .advantages__item -->
-			<div class="advantages__item"> <!-- start .advantages__item -->
-				<svg class="icon-success"><use xlink:href="#success"></use></svg>
-				<strong>Cost, Quality and Customers</strong>
-				<p>providing high-quality products and services to customers and business partners while being cost effective</p>
-			</div> <!-- end .advantages__item -->
-			<div class="advantages__item"> <!-- start .advantages__item -->
-				<svg class="icon-success"><use xlink:href="#success"></use></svg>
-				<strong>Results and Accountability</strong>
-				<p>achieving long-term profitability in a responsible and ethical manner</p>
-			</div> <!-- end .advantages__item -->
-			<div class="advantages__item"> <!-- start .advantages__item -->
-				<svg class="icon-success"><use xlink:href="#success"></use></svg>
-				<strong>Environmental Stewardship</strong>
-				<p>running steelmaking operations with the lowest possible impact on the environment, and in compliance with environmental laws and regulations</p>
-			</div> <!-- end .advantages__item -->
-		</div>
-	</div>
-</div> <!-- end .section.advantages -->
-
-<div class="section assortment"> <!-- start .section.assortment -->
-	<div class="assortment-bg"></div>
+<div class="section catalog"> <!-- start .section.catalog -->
 	<div class="section__inner">
 		<header class="section__header">
-			<h2 class="section__title">What we produce</h2>
+			<h2 class="section__title">Fittings PP-R</h2>
 		</header>
-		<p>Our product mix comprises high value-added products suitable for applications in the automotive, packaging, electrotechnical, consumer goods and building industries. Their high quality is guaranteed by our QMS in line with ISO 9001. We also hold several other international certificates.</p>
-		<p>We produce:</p>
-		<ul>
-			<li><a href="radiators.html">Heating Radiators</a></li>
-			<li><a href="radiators.html">Pipes PP-R</a></li>
-			<li><a href="radiators.html">Fittings PP-R</a></li>
-		</ul>
+		<div class="catalog__wrapper">
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/elbow90s.jpg" alt="Elbow 90 degree" class="item__image">
+				<p class="item__title">Elbow 90 degree</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/elbow90ext.jpg" alt="Elbow 90 degree ext" class="item__image">
+				<p class="item__title">Elbow 90 degree ext</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/trojcestnkoleno.jpg" alt="Triple elbow" class="item__image">
+				<p class="item__title">Triple elbow</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/cross.jpg" alt="Cross" class="item__image">
+				<p class="item__title">Cross</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/elbow90s.jpg" alt="Elbow 90 degree" class="item__image">
+				<p class="item__title">Elbow 90 degree</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/elbow90ext.jpg" alt="Elbow 90 degree ext" class="item__image">
+				<p class="item__title">Elbow 90 degree ext</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/trojcestnkoleno.jpg" alt="Triple elbow" class="item__image">
+				<p class="item__title">Triple elbow</p>
+			</a>
+			
+			<a href="item.html" class="catalog__item">
+				<img src="images/catalog/cross.jpg" alt="Cross" class="item__image">
+				<p class="item__title">Cross</p>
+			</a>
+			
+		</div>
 	</div>
-</div> <!-- end .section.assortment -->
+</div> <!-- end .section.catalog -->
 
 
     <!-- END content -->
