--- a/rd/catalog.html
+++ b/rd/catalog.html
@@ -63,6 +63,7 @@
       <div class="container main-nav__inner">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-label">МЕНЮ</span>
             <span class="navbar-toggler-icon"></span>
           </button>
 
